[gd_scene load_steps=19 format=3 uid="uid://brms7i87pfawr"]

[ext_resource type="Texture2D" uid="uid://bcptsuv06kq25" path="res://Sprites/Player_metroid.png" id="1_cxc3f"]
[ext_resource type="Script" path="res://Entities/entities_scripts/player.gd" id="1_ukrib"]
[ext_resource type="Shader" path="res://Shaders/hurt.gdshader" id="2_dwf4p"]
[ext_resource type="Script" path="res://Entities/entities_scripts/camera.gd" id="4_jek05"]
[ext_resource type="PackedScene" uid="uid://c06a4jq71ysuh" path="res://UI/ui_scenes/mouse_icon.tscn" id="4_v52kv"]
[ext_resource type="Texture2D" uid="uid://c3re1sp6ho24b" path="res://Sprites/PikPng.com_bazooka-png_1896275.png" id="5_j8ek6"]
[ext_resource type="Texture2D" uid="uid://cieogogxl8sko" path="res://Sprites/m16_2.png" id="6_r20b8"]
[ext_resource type="AudioStream" uid="uid://bdst5cjd6a6qn" path="res://SoundEffects/Shot_bazooka.ogg" id="7_tfnia"]
[ext_resource type="AudioStream" uid="uid://c41s3wtu5ym1u" path="res://SoundEffects/walking_sound1.ogg" id="8_01fvg"]
[ext_resource type="AudioStream" uid="uid://chf2546e33apu" path="res://SoundEffects/AudioStreamM16Shot.ogg" id="10_emtum"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpujb"]
size = Vector2(14.2857, 22.1429)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7das3"]
shader = ExtResource("2_dwf4p")
shader_parameter/flash_color = Color(1, 0.172549, 0.129412, 0.933333)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_646v8"]
resource_name = "Dead"
length = 1.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_colider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_colider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_state"
}]
}

[sub_resource type="Animation" id="Animation_7ibwv"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_colider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_colider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_g02t7"]
resource_name = "Move"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_colider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_colider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_h3ykm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_colider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_colider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2kxc"]
_data = {
"Dead": SubResource("Animation_646v8"),
"Idle": SubResource("Animation_7ibwv"),
"Move": SubResource("Animation_g02t7"),
"RESET": SubResource("Animation_h3ykm")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_40p5x"]
radius = 7.14286
height = 28.5714

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -6)
scale = Vector2(0.7, 0.7)
collision_mask = 31
script = ExtResource("1_ukrib")
speed = 100

[node name="player_colider" type="CollisionShape2D" parent="."]
position = Vector2(2.12874e-07, 13.1429)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_cpujb")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_7das3")
texture = ExtResource("1_cxc3f")
hframes = 8
vframes = 7
frame = 1

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j2kxc")
}
autoplay = "Idle"

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 32

[node name="hitbox_colider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 10)
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_40p5x")
disabled = true
debug_color = Color(0.904192, 0.253779, 0.443605, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 8)
zoom = Vector2(4, 4)
script = ExtResource("4_jek05")

[node name="camera_shake" type="Timer" parent="Camera2D"]
autostart = true

[node name="weapons_container" type="Node2D" parent="."]
position = Vector2(0, 12.605)

[node name="bazooka" type="Node2D" parent="weapons_container"]

[node name="gun_sprite" type="Sprite2D" parent="weapons_container/bazooka"]
z_index = 1
position = Vector2(8.33333, -0.16153)
scale = Vector2(0.0231622, 0.0254051)
texture = ExtResource("5_j8ek6")

[node name="bullet_point" type="Marker2D" parent="weapons_container/bazooka"]
position = Vector2(21.4286, -0.394957)

[node name="m16" type="Node2D" parent="weapons_container"]

[node name="gun_sprite" type="Sprite2D" parent="weapons_container/m16"]
z_index = 1
position = Vector2(10.2232, 0.589341)
scale = Vector2(0.0391071, 0.0358473)
texture = ExtResource("6_r20b8")

[node name="bullet_point" type="Marker2D" parent="weapons_container/m16"]
position = Vector2(21.4286, -0.394957)

[node name="Sounds" type="Node" parent="."]

[node name="WalkSoundPlayer" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(0, -6)
scale = Vector2(0.7, 0.714)
stream = ExtResource("8_01fvg")
volume_db = 6.0
panning_strength = 0.0

[node name="AudioStreamBazookaShot" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(0, -6)
scale = Vector2(0.7, 0.714)
stream = ExtResource("7_tfnia")
volume_db = 5.0
panning_strength = 0.0

[node name="AudioStreamM16Shot" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_emtum")
volume_db = 4.0

[node name="mouse_icon" parent="." instance=ExtResource("4_v52kv")]
position = Vector2(0, 12.605)
scale = Vector2(0.640001, 0.68)

[node name="trail_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Camera2D/camera_shake" to="Camera2D" method="_on_camera_shake_timeout"]
[connection signal="timeout" from="trail_timer" to="." method="_on_trail_timer_timeout"]
